refactor: reorganize Path API structure
- Rename Path functional interface to PathRef for method references
- Create new Path interface extending SimpleExpression for expressions
- Remove PathExpression interface, replaced by new Path
- Move EntityRoot from api/model to api package
- Remove unused QueryConfig interface
- Update all references to use new PathRef/Path structure