@@ -1,7 +1,7 @@
 package io.github.nextentity.integration;
 
+import io.github.nextentity.api.Path;
 import io.github.nextentity.api.model.Order;
-import io.github.nextentity.core.util.Paths;
 import io.github.nextentity.integration.config.IntegrationTestContext;
 import io.github.nextentity.integration.config.IntegrationTestProvider;
 import io.github.nextentity.integration.entity.Employee;
@@ -42,7 +42,7 @@ public class SimpleExpressionSortOrderIntegrationTest {
     @DisplayName("Should order by string field ascending using asc()")
     void shouldOrderByStringAsc(IntegrationTestContext context) {
         // Given - use asc() to create Order from SimpleExpression
-        Order<Employee> nameAscOrder = Paths.get(Employee::getName).asc();
+        Order<Employee> nameAscOrder = Path.of(Employee::getName).asc();
 
         // When - pass Order to orderBy
         List<Employee> employees = context.queryEmployees()
@@ -65,7 +65,7 @@ public class SimpleExpressionSortOrderIntegrationTest {
     @DisplayName("Should order by numeric field ascending using asc()")
     void shouldOrderByNumericAsc(IntegrationTestContext context) {
         // Given
-        Order<Employee> salaryAscOrder = Paths.get(Employee::getSalary).asc();
+        Order<Employee> salaryAscOrder = Path.of(Employee::getSalary).asc();
 
         // When
         List<Employee> employees = context.queryEmployees()
@@ -88,7 +88,7 @@ public class SimpleExpressionSortOrderIntegrationTest {
     @DisplayName("Should order by ID field ascending using asc()")
     void shouldOrderByIdAsc(IntegrationTestContext context) {
         // Given
-        Order<Employee> idAscOrder = Paths.get(Employee::getId).asc();
+        Order<Employee> idAscOrder = Path.of(Employee::getId).asc();
 
         // When
         List<Employee> employees = context.queryEmployees()
@@ -113,7 +113,7 @@ public class SimpleExpressionSortOrderIntegrationTest {
     @DisplayName("Should order by string field descending using desc()")
     void shouldOrderByStringDesc(IntegrationTestContext context) {
         // Given
-        Order<Employee> nameDescOrder = Paths.get(Employee::getName).desc();
+        Order<Employee> nameDescOrder = Path.of(Employee::getName).desc();
 
         // When
         List<Employee> employees = context.queryEmployees()
@@ -136,7 +136,7 @@ public class SimpleExpressionSortOrderIntegrationTest {
     @DisplayName("Should order by numeric field descending using desc()")
     void shouldOrderByNumericDesc(IntegrationTestContext context) {
         // Given
-        Order<Employee> salaryDescOrder = Paths.get(Employee::getSalary).desc();
+        Order<Employee> salaryDescOrder = Path.of(Employee::getSalary).desc();
 
         // When
         List<Employee> employees = context.queryEmployees()
@@ -159,7 +159,7 @@ public class SimpleExpressionSortOrderIntegrationTest {
     @DisplayName("Should order by ID field descending using desc()")
     void shouldOrderByIdDesc(IntegrationTestContext context) {
         // Given
-        Order<Employee> idDescOrder = Paths.get(Employee::getId).desc();
+        Order<Employee> idDescOrder = Path.of(Employee::getId).desc();
 
         // When
         List<Employee> employees = context.queryEmployees()
@@ -184,7 +184,7 @@ public class SimpleExpressionSortOrderIntegrationTest {
     @DisplayName("Should combine asc() with where clause")
     void shouldCombineAscWithWhere(IntegrationTestContext context) {
         // Given
-        Order<Employee> nameAscOrder = Paths.get(Employee::getName).asc();
+        Order<Employee> nameAscOrder = Path.of(Employee::getName).asc();
 
         // When
         List<Employee> employees = context.queryEmployees()
@@ -209,7 +209,7 @@ public class SimpleExpressionSortOrderIntegrationTest {
     @DisplayName("Should combine desc() with where clause")
     void shouldCombineDescWithWhere(IntegrationTestContext context) {
         // Given
-        Order<Employee> salaryDescOrder = Paths.get(Employee::getSalary).desc();
+        Order<Employee> salaryDescOrder = Path.of(Employee::getSalary).desc();
 
         // When
         List<Employee> employees = context.queryEmployees()
@@ -236,7 +236,7 @@ public class SimpleExpressionSortOrderIntegrationTest {
     @DisplayName("Should count with asc() ordering")
     void shouldCountWithAscOrdering(IntegrationTestContext context) {
         // Given
-        Order<Employee> idAscOrder = Paths.get(Employee::getId).asc();
+        Order<Employee> idAscOrder = Path.of(Employee::getId).asc();
 
         // When
         long count = context.queryEmployees()
@@ -255,7 +255,7 @@ public class SimpleExpressionSortOrderIntegrationTest {
     @DisplayName("Should check exist with desc() ordering")
     void shouldCheckExistWithDescOrdering(IntegrationTestContext context) {
         // Given
-        Order<Employee> idDescOrder = Paths.get(Employee::getId).desc();
+        Order<Employee> idDescOrder = Path.of(Employee::getId).desc();
 
         // When
         boolean exists = context.queryEmployees()
@@ -276,7 +276,7 @@ public class SimpleExpressionSortOrderIntegrationTest {
     @DisplayName("Should getFirst with asc() ordering returns minimum")
     void shouldGetFirstWithAscReturnsMinimum(IntegrationTestContext context) {
         // Given
-        Order<Employee> idAscOrder = Paths.get(Employee::getId).asc();
+        Order<Employee> idAscOrder = Path.of(Employee::getId).asc();
 
         // When
         Employee first = context.queryEmployees()
@@ -296,7 +296,7 @@ public class SimpleExpressionSortOrderIntegrationTest {
     @DisplayName("Should getFirst with desc() ordering returns maximum")
     void shouldGetFirstWithDescReturnsMaximum(IntegrationTestContext context) {
         // Given
-        Order<Employee> idDescOrder = Paths.get(Employee::getId).desc();
+        Order<Employee> idDescOrder = Path.of(Employee::getId).desc();
 
         // And - get max id for verification
         long maxId = context.queryEmployees()
@@ -322,7 +322,7 @@ public class SimpleExpressionSortOrderIntegrationTest {
     @DisplayName("Should limit with asc() ordering")
     void shouldLimitWithAscOrdering(IntegrationTestContext context) {
         // Given
-        Order<Employee> idAscOrder = Paths.get(Employee::getId).asc();
+        Order<Employee> idAscOrder = Path.of(Employee::getId).asc();
 
         // When
         List<Employee> employees = context.queryEmployees()
@@ -331,7 +331,7 @@ public class SimpleExpressionSortOrderIntegrationTest {
 
         // Then
         assertThat(employees).hasSize(5);
-        assertThat(employees.get(0).getId()).isEqualTo(1L);
+        assertThat(employees.getFirst().getId()).isEqualTo(1L);
     }
 
     /**
@@ -342,7 +342,7 @@ public class SimpleExpressionSortOrderIntegrationTest {
     @DisplayName("Should offset with desc() ordering")
     void shouldOffsetWithDescOrdering(IntegrationTestContext context) {
         // Given
-        Order<Employee> idDescOrder = Paths.get(Employee::getId).desc();
+        Order<Employee> idDescOrder = Path.of(Employee::getId).desc();
         long totalCount = context.queryEmployees().count();
 
         // When
@@ -364,8 +364,8 @@ public class SimpleExpressionSortOrderIntegrationTest {
     @DisplayName("Should use orderBy with two Order objects")
     void shouldUseOrderByWithTwoOrders(IntegrationTestContext context) {
         // Given
-        Order<Employee> salaryDescOrder = Paths.get(Employee::getSalary).desc();
-        Order<Employee> idAscOrder = Paths.get(Employee::getId).asc();
+        Order<Employee> salaryDescOrder = Path.of(Employee::getSalary).desc();
+        Order<Employee> idAscOrder = Path.of(Employee::getId).asc();
 
         // When
         List<Employee> employees = context.queryEmployees()
@@ -384,9 +384,9 @@ public class SimpleExpressionSortOrderIntegrationTest {
     @DisplayName("Should use orderBy with three Order objects")
     void shouldUseOrderByWithThreeOrders(IntegrationTestContext context) {
         // Given
-        Order<Employee> salaryDescOrder = Paths.get(Employee::getSalary).desc();
-        Order<Employee> nameAscOrder = Paths.get(Employee::getName).asc();
-        Order<Employee> idAscOrder = Paths.get(Employee::getId).asc();
+        Order<Employee> salaryDescOrder = Path.of(Employee::getSalary).desc();
+        Order<Employee> nameAscOrder = Path.of(Employee::getName).asc();
+        Order<Employee> idAscOrder = Path.of(Employee::getId).asc();
 
         // When
         List<Employee> employees = context.queryEmployees()
